# Orchestrate

code/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
code/app/: main.py
code/app/cache/: cache.py
code/app/config/: settings.py
code/app/indexing/: indexer.py
code/app/llm/: llm.py  prompts.py
code/app/orchestration/: pipeline.py
code/app/retrieval/: embeddings.py  example_retriever.py  retriever.py  vector_db_client.py
code/app/utils/: preprocessing.py
code/faiss_db/: main.py
support_tickets/: output.csv
